completed  crud operation with frontend and springboot backend

--- a/Spring_Introduction/Spring_Intro-FrontEnd(SE10)/index.html
+++ b/Spring_Introduction/Spring_Intro-FrontEnd(SE10)/index.html
@@ -3,15 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet"href="./css/style.css">
+    <link rel="stylesheet"href="./css/bootstrap.min.css">
     <title>SpringIntro-FrontEnd</title>
 </head>
 <body>
-    <main>
-        <section id="section-1" class="section">section 1</section>
-        <section id="section-2" class="section">section 2</section>
-    </main>
+<main>
+    <nav class="navbar navbar-expand-lg bg-body-secondary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <section class="container">
+        <div class="mb-3">
+            <label  class="form-label">Post ID</label>
+            <input type="text" class="form-control" id="post-id" placeholder="type your post id">
+        </div>
+        <div class="mb-3">
+            <label  class="form-label">Post Title</label>
+            <input type="text" class="form-control" id="post-title" placeholder="enter your post title">
+        </div>
+        <div class="mb-3">
+            <label  class="form-label">Post Content</label>
+            <textarea class="form-control" id="post-content" rows="3"></textarea>
+        </div>
+        <button type="button" class="btn btn-success" id="savepost">Save Post</button>
+        <button type="button" class="btn btn-warning" id="updatepost">Update Post</button>
+        <button type="button" class="btn btn-danger" id="deletepost">Delete Post</button>
+        <button type="button" class="btn btn-primary" id="getallposts">Get All Post</button>
+    </section>
+
+    <div class="container mt-5">
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Title</th>
+                <th scope="col">Content</th>
+                <th scope="col">Action</th>
+            </tr>
+            </thead>
+            <tbody id="postTableBody">
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Update Post Popup -->
+    <div id="updatePostPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" id="closeUpdatePopup">&times;</span>
+            <h2>Update Post</h2>
+            <input type="hidden" id="update-post-id">
+            <label for="update-post-title">Title:</label>
+            <input type="text" class="form-control" id="update-post-title">
+            <label for="update-post-content">Content:</label>
+            <textarea class="form-control" id="update-post-content" rows="3"></textarea>
+            <button class="btn btn-warning" id="updatePost">Update Post</button>
+        </div>
+    </div>
+
+    <!-- Delete Post Popup -->
+    <div id="deletePostPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" id="closeDeletePopup">&times;</span>
+            <h2>Delete Post</h2>
+            <p>Are you sure you want to delete this post?</p>
+            <button class="btn btn-danger" id="confirmDeletePost">Delete</button>
+            <button class="btn btn-secondary" id="cancelDeletePost">Cancel</button>
+        </div>
+    </div>
+</main>
     <footer></footer>
 
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
