--- a/JWT/JWT-Frontend/signin.html
+++ b/JWT/JWT-Frontend/signin.html
@@ -27,7 +27,7 @@
 
 <body>
 <div class="container">
-  <h2 class="text-center mb-4">Sign In</h2>
+  <h2 class="text-center mb-4">Login</h2>
   <form>
     <div class="mb-3">
       <label for="email" class="form-label">Email</label>
@@ -38,14 +38,14 @@
       <input type="password" class="form-control" id="password"  required>
     </div>
     <div class="d-grid gap-2">
-      <button type="submit" class="btn btn-primary w-100">Sign In</button>
+      <button class="btn btn-primary w-100" onclick="userLogin()">Sign In</button>
     </div>
     <p class="text-center mt-3">Don't have an account? <a href="signup.html">Sign Up</a></p>
   </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<!--<script src="/js/auth.js"></script>-->
+<script src="/js/auth.js"></script>
 </body>
 
 </html>
